--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-4274213033222378",
+    enable_page_level_ads: true
+  });
+  </script>
   <meta charset="utf-8">
   <title>TeamTaskMonitoring</title>
   <base href="/">
